--- a/src/main/resources/templates/menu/button2/admin/items/itemsEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/items/itemsEdit.html
@@ -8,22 +8,17 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+        <nav class="col-md-2 sidebar-nav"
              th:insert="blocks/menuRightAdmin ::div"></nav>
 
-
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <div class="col-md-10 fon-1400px pd-50">
             <h1>Изменение оружие</h1>
             <form th:action="'/admin/edit/items/' + ${items.id}" method="post" enctype="multipart/form-data">
                 <p>вставте икону предмета
                 <input type="file" name="iconWeapon" th:value="${items.icon}">
                 </p>
-                <input type="text" name="weapon" placeholder="Ведите имя предмета" class="form-control" th:value="${items.name}"><br>
-                <input type="text" name="items1" list="datalistOptions1" placeholder="Ведите из чего собираються" class="form-control" th:value="${items1}"><br>
+                <input type="text" name="name" placeholder="Ведите имя предмета" class="form-control" th:value="${items.name}"><br>
 
-                <input type="text" name="items2" list="datalistOptions1" placeholder="Ведите из чего собираються" class="form-control"  th:value="${items2}" ><br>
-
-                <input type="text" name="items3" list="datalistOptions1" placeholder="Ведите из чего собираються" class="form-control" th:value="${items3}" ><br>
 
                 <datalist id="datalistOptions1">
                     <option th:each="weapon : ${items}"> <t th:text="${weapon.name}"></t></option>
@@ -49,7 +44,7 @@
                 <button type="submit" class="btn btn-success">Обновить</button>
             </form>
 
-        </main>
+        </div>
     </div>
 </div>
 
