--- a/src/main/resources/templates/blocks/headerFooter/header.html
+++ b/src/main/resources/templates/blocks/headerFooter/header.html
@@ -28,7 +28,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="/home/display/hero">Герои</a></li>
                                     <li><a class="dropdown-item" href="/home/display/items">Предметы</a></li>
-                                    <li><a class="dropdown-item" href="/home/display/skill">Скилы</a></li>
+                                    <li><a class="dropdown-item" href="/home/display/skill">Риликвии</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
