--- a/src/main/resources/templates/menu/button1/autoChess.html
+++ b/src/main/resources/templates/menu/button1/autoChess.html
@@ -15,23 +15,22 @@
     </div>
     <div class="grid">
 
-              <div class="col-md-12" th:each="ability : ${path}">
-                <div th:if="${ability}">
-                  <div class="h2" th:text="${ability.name}"></div>
-                  <div>
-                      <img th:src="'/images/path/' + ${ability.id}" width="1350px">
-                  </div>
-                    <a class="nav-link px-2 tir4" th:href="'/home/detals/path/' +${ability.id}"><t> Подробней:-->тут</t></a>
-                </div>
-  
-  
-              </div>
+        <div class="col-md-12" th:each="ability : ${path}">
+            <div th:if="${ability}">
+                <div th:if="${ability.name}" class="h2" th:text="${ability.name}"></div>
+                <div><img th:src="'/images/path/' + ${ability.id}" width="1350px"></div>
+                <div th:text="${ability.full_text}"></div>
+            </div>
 
-    
-</div>
+        </div>
+
+
+    </div>
 </div>
 <footer th:insert="blocks/headerFooter/footer :: div"></footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
