--- a/src/main/resources/templates/menu/button2/admin/class/classAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/class/classAdd.html
@@ -6,16 +6,17 @@
 
 </header>
 
-<div class="container-fluid">
+
     <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+        <nav class="col-md-2 sidebar-nav"
              th:insert="blocks/menuRightAdmin ::div"></nav>
 
+        <div class="col-md-10 fon-1400px pd-50">
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Добавление класса</h1>
             <form th:action="@{/admin/add/class}" method="post" enctype="multipart/form-data">
-                <input type="text" name="classHero" list="datalistOptions" id="exampleDataList"  placeholder="Ведите имя класса" class="form-control"><br>
+                <input type="text" name="classHero" list="datalistOptions" id="exampleDataList"
+                       placeholder="Ведите имя класса" class="form-control"><br>
 
                 <datalist id="datalistOptions">
                     <option th:each="classHero : ${class}" th:value="${classHero.name}"></option>
@@ -25,10 +26,9 @@
 
                 <button type="submit" class="btn btn-success">Добавить</button>
             </form>
-
-        </main>
+        </div>
     </div>
-</div>
+
 
 
 <footer th:insert="blocks/headerFooter/footer :: div"></footer>
