--- a/src/main/resources/templates/menu/button2/admin/class/classDisplay.html
+++ b/src/main/resources/templates/menu/button2/admin/class/classDisplay.html
@@ -3,51 +3,47 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>Главня</title>
+  <title>Класс</title>
 </head>
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
 
-<div class="container-fluid" id="t">
+
   <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+    <nav class="col-md-2 sidebar-nav"
          th:insert="blocks/menuRightAdmin ::div"></nav>
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="centr-1400px fon-1400px">
 
+      <div class="col-md-10 fon-1400px">
+          <h1>Классы:</h1> <br>
+          <div>
+              <button type="button" class="btn btn-secondary"><h4><a href="/home/display/hero" class="nav-link px-2 text-dark"> < К фигурам</a></h4></button>
+          </div><br>
 
+          <div th:each="en : ${class}" class="list-inline-item bk" id="wh">
+              <div  th:if="${en.energising.energisingImage}" class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto" data-bs-trigger="hover focus" th:data-bs-content-id="examplePopover +${en.energising.id}">
+                  <li class="list-inline-item bk"><img th:src="'/images/energising/' + ${en.energising.energisingImage.get(0).id}" height="40px" width="50px"></li>
+                  <!--Modal-->
+                  <div class="modal fade" th:id="examplePopover +${en.id}" tabindex="-1" aria-hidden="true">
 
+                      <img th:if="${en.energising.energisingImage}" th:src="'/images/energising/' + ${en.energising.energisingImage.get(1).id}">
 
-        <h1>Синергии:</h1> <br>
-        <h2><a href="/admin/display/hero">К фигурам</a></h2>
-
-
-
-        <div th:each="en : ${class}" class="list-inline-item" id="wh">
-          <div  th:if="${en.energising.energisingImage}" class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto" data-bs-trigger="hover focus" th:data-bs-content-id="examplePopover +${en.energising.id}">
-            <li class="list-inline-item bk"><img th:src="'/images/energising/' + ${en.energising.energisingImage.get(0).id}" height="40px" width="50px"></li>
-            <!--Modal-->
-            <div class="modal fade" th:id="examplePopover +${en.id}" tabindex="-1" aria-hidden="true">
-
-              <img th:if="${en.energising.energisingImage}" th:src="'/images/energising/' + ${en.energising.energisingImage.get(1).id}">
-
-            </div>
-          </div>>
-          <li class="list-inline-item bk"><a th:href="'/admin/detals/energising/' +${en.energising.id}"  class="nav-link px-2 text-yellow"><t th:text="${en.energising.name}"></t></a></li>
-          <span id="wite">
+                  </div>
+              </div>>
+              <li class="list-inline-item bk"><a th:href="'/admin/detals/energising/' +${en.energising.id}"  class="nav-link px-2 text-yellow"><t th:text="${en.energising.name}"></t></a></li>
+              <span id="wite">
           <li  class="list-inline-item bk"><img  th:src="@{/image/Screenshot_5.png}" height="20px" width="20px"></li>
           <li  class="list-inline-item bk"><t th:if="${en.energising.priceDelete}" th:text="'x ' + ${en.energising.priceDelete}"></t></li>
         </span>
 
 
-        </div>
+          </div>
+
+
       </div>
-    </main>
-  </div>
-</div>
-  <footer th:insert="blocks/headerFooter/footer :: div"></footer>
+
+      <footer th:insert="blocks/headerFooter/footer :: div"></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
