--- a/src/main/resources/templates/menu/button2/admin/class/classEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/class/classEdit.html
@@ -6,25 +6,23 @@
 
 </header>
 
-<div class="container-fluid">
-    <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
 
+<div class="row">
+    <nav class="col-md-2 sidebar-nav"
+         th:insert="blocks/menuRightAdmin ::div"></nav>
 
+    <div class="col-md-10 fon-1400px pd-50">
+        <h1>Обнавление Класса</h1>
+        <form th:action="@{'/admin/edit/class/' + ${class.id}} " method="post" enctype="multipart/form-data">
+            <input th:value="${class.name}" type="text" name="name" placeholder="Ведите имя класса"
+                   class="form-control"><br>
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <h1>Обнавление Класса</h1>
-            <form th:action="@{'/admin/edit/class/' + ${class.id}} " method="post" enctype="multipart/form-data">
-                <input th:value="${class.name}" type="text" name="name"  placeholder="Ведите имя класса" class="form-control"><br>
-
-                <button type="submit" class="btn btn-success">Обновить</button>
-                <a th:href="@{'/admin/delete/class/' + ${class.id}}" class="btn btn-success">Удалить</a>
-            </form>
-
-        </main>
+            <button type="submit" class="btn btn-success">Обновить</button>
+            <a th:href="@{'/admin/delete/class/' + ${class.id}}" class="btn btn-success">Удалить</a>
+        </form>
 
     </div>
+
 </div>
 
 
