--- a/src/main/resources/templates/menu/button2/admin/items/itemsDisplay.html
+++ b/src/main/resources/templates/menu/button2/admin/items/itemsDisplay.html
@@ -8,265 +8,80 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
+<div class="row">
+    <nav class="col-md-2 sidebar-nav"
+         th:insert="blocks/menuRightAdmin ::div"></nav>
 
-<div class="container-fluid" id="t">
-    <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <div class="col-md-10 fon-1400px">
 
-        <div class="centr-1400px fon-1400px">
-
-
-            <div class="inline-block-table" display="flex">
-
-                <table class="table table-borderless">
-                    <thead>
-                    <tr>
-                        <th>1$ Предмет
-                        </th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-
-                    <tr>
-                        <td class="tb-padding">
-                            <div th:each="items : ${displayItemsTir1}" class="list-inline-item1">
-                                <li class="list-inline-item bk"><img th:if="${items.icon}"
-                                                                     th:src="'/images/items/' + ${items.icon.id}"
-                                                                     height="40px" width="50px"></li>
-                                <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
-                                                                   class="nav-link px-2 text-yellow">
-                                    <t th:text="${items.name}"></t>
-                                </a></li>
-                                <li th:if="${items.weapons1}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons1.icon}"
-                                        th:src="'/images/items/' + ${items.weapons1.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons2.icon}"
-                                        th:src="'/images/items/' + ${items.weapons2.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons3.icon}"
-                                        th:src="'/images/items/' + ${items.weapons3.icon.id}"
-                                        height="30px" width="30px"></li>
+        <div th:each="items : ${displayItemsTir1}" class="list-inline-item1">
+            <li class="list-inline-item bk"><img th:if="${items.icon}"
+                                                 th:src="'/img/' + ${items.icon}"
+                                                 height="40px" width="50px"></li>
+            <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
+                                               class="nav-link px-2 text-yellow">
+                <t th:text="${items.name}"></t>
+            </a></li>
+        </div>
 
 
-                            </div>
-                        </td>
-                    </tr>
-
-                    </tbody>
-
-                </table>
-
-
-            </div>
-
-            <div class="inline-block-table" display="flex">
-
-                <table class="table table-borderless">
-                    <thead>
-                    <tr>
-                        <th>2$ Предмет
-                        </th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-
-                    <tr>
-                        <td class="tb-padding">
-                            <div th:each="items : ${displayItemsTir2}" class="list-inline-item1">
-                                <li class="list-inline-item bk"><img th:if="${items.icon}"
-                                                                     th:src="'/images/items/' + ${items.icon.id}"
-                                                                     height="40px" width="50px"></li>
-                                <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
-                                                                   class="nav-link px-2 text-yellow">
-                                    <t th:text="${items.name}"></t>
-                                </a></li>
-                                <li th:if="${items.weapons1}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons1.icon}"
-                                        th:src="'/images/items/' + ${items.weapons1.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons2.icon}"
-                                        th:src="'/images/items/' + ${items.weapons2.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons3.icon}"
-                                        th:src="'/images/items/' + ${items.weapons3.icon.id}"
-                                        height="30px" width="30px"></li>
+        <div th:each="items : ${displayItemsTir2}" class="list-inline-item1">
+            <li class="list-inline-item bk"><img th:if="${items.icon}"
+                                                 th:src="'/img/' + ${items.icon}"
+                                                 height="40px" width="50px"></li>
+            <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
+                                               class="nav-link px-2 text-yellow">
+                <t th:text="${items.name}"></t>
+            </a></li>
+        </div>
 
 
-                            </div>
-                        </td>
-                    </tr>
-
-                    </tbody>
-
-                </table>
-
-
-            </div>
-
-
-            <div class="inline-block-table" display="flex">
-
-                <table class="table table-borderless">
-                    <thead>
-                    <tr>
-                        <th>3$ Предмет
-                        </th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-
-                    <tr>
-                        <td class="tb-padding">
-                            <div th:each="items : ${displayItemsTir3}" class="list-inline-item1">
-                                <li class="list-inline-item bk"><img th:if="${items.icon}"
-                                                                     th:src="'/images/items/' + ${items.icon.id}"
-                                                                     height="40px" width="50px"></li>
-                                <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
-                                                                   class="nav-link px-2 text-yellow">
-                                    <t th:text="${items.name}"></t>
-                                </a></li>
-                                <li th:if="${items.weapons1}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons1.icon}"
-                                        th:src="'/images/items/' + ${items.weapons1.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons2.icon}"
-                                        th:src="'/images/items/' + ${items.weapons2.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons3.icon}"
-                                        th:src="'/images/items/' + ${items.weapons3.icon.id}"
-                                        height="30px" width="30px"></li>
+        <div th:each="items : ${displayItemsTir3}" class="list-inline-item1">
+            <li class="list-inline-item bk"><img th:if="${items.icon}"
+                                                 th:src="'/img/' + ${items.icon}"
+                                                 height="40px" width="50px"></li>
+            <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
+                                               class="nav-link px-2 text-yellow">
+                <t th:text="${items.name}"></t>
+            </a></li>
+        </div>
 
 
-                            </div>
-                        </td>
-                    </tr>
+        <div th:each="items : ${displayItemsTir4}" class="list-inline-item1">
+            <li class="list-inline-item bk"><img th:if="${items.icon}"
+                                                 th:src="'/img/' + ${items.icon}"
+                                                 height="40px" width="50px"></li>
+            <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
+                                               class="nav-link px-2 text-yellow">
+                <t th:text="${items.name}"></t>
+            </a></li>
 
-                    </tbody>
-
-                </table>
-
-
-            </div>
-
-
-            <div class="inline-block-table" display="flex">
-
-                <table class="table table-borderless">
-                    <thead>
-                    <tr>
-                        <th>4$ Предмет
-                        </th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-
-                    <tr>
-                        <td class="tb-padding">
-                            <div th:each="items : ${displayItemsTir4}" class="list-inline-item1">
-                                <li class="list-inline-item bk"><img th:if="${items.icon}"
-                                                                     th:src="'/images/items/' + ${items.icon.id}"
-                                                                     height="40px" width="50px"></li>
-                                <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
-                                                                   class="nav-link px-2 text-yellow">
-                                    <t th:text="${items.name}"></t>
-                                </a></li>
-                                <li th:if="${items.weapons1}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons1.icon}"
-                                        th:src="'/images/items/' + ${items.weapons1.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons2.icon}"
-                                        th:src="'/images/items/' + ${items.weapons2.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons3.icon}"
-                                        th:src="'/images/items/' + ${items.weapons3.icon.id}"
-                                        height="30px" width="30px"></li>
-
-
-                            </div>
-                        </td>
-                    </tr>
-
-                    </tbody>
-
-                </table>
-
-
-            </div>
-
-
-            <div class="inline-block-table" display="flex">
-
-                <table class="table table-borderless">
-                    <thead>
-                    <tr>
-                        <th>5$ Предмет
-                        </th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-
-                    <tr>
-                        <td class="tb-padding">
-                            <div th:each="items : ${displayItemsTir5}" class="list-inline-item1">
-                                <li class="list-inline-item bk"><img th:if="${items.icon}"
-                                                                     th:src="'/images/items/' + ${items.icon.id}"
-                                                                     height="40px" width="50px"></li>
-                                <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
-                                                                   class="nav-link px-2 text-yellow">
-                                    <t th:text="${items.name}"></t>
-                                </a></li>
-                                <li th:if="${items.weapons1}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons1.icon}"
-                                        th:src="'/images/items/' + ${items.weapons1.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons2.icon}"
-                                        th:src="'/images/items/' + ${items.weapons2.icon.id}"
-                                        height="30px" width="30px"></li>
-                                <li th:if="${items.weapons3}" class="list-inline-item bk"><img
-                                        th:if="${items.weapons3.icon}"
-                                        th:src="'/images/items/' + ${items.weapons3.icon.id}"
-                                        height="30px" width="30px"></li>
-
-
-                            </div>
-                        </td>
-                    </tr>
-
-                    </tbody>
-
-                </table>
-
-
-            </div>
-
-
-            </table>
 
         </div>
-        </main>
-        <footer th:insert="blocks/headerFooter/footer :: div"></footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
+
+
+        <div th:each="items : ${displayItemsTir5}" class="list-inline-item1">
+            <li class="list-inline-item bk"><img th:if="${items.icon}"
+                                                 th:src="'/img/' + ${items.icon}"
+                                                 height="40px" width="50px"></li>
+            <li class="list-inline-item bk"><a th:href="'/admin/detals/items/' +${items.id}"
+                                               class="nav-link px-2 text-yellow">
+                <t th:text="${items.name}"></t>
+            </a></li>
+
+        </div>
+
 
     </div>
 </div>
+</div>
+</div>
+</div>
+<footer th:insert="blocks/headerFooter/footer :: div"></footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+
 </body>
 </html>
