--- a/src/main/resources/templates/menu/button2/admin/skill/skillAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/skill/skillAdd.html
@@ -2,30 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <body>
 
+
 <header th:insert="blocks/headerFooter/header :: header">
 
 </header>
 
-<div class="container-fluid">
-    <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
 
+<div class="row">
+    <nav class="col-md-2 sidebar-nav"
+         th:insert="blocks/menuRightAdmin ::div"></nav>
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <h1>Добавление Абилки</h1>
-            <form th:action="@{/admin/add/skill}" method="post" enctype="multipart/form-data">
-                <p>вставте икону Абилки
+    <div class="col-md-10 fon-1400px pd-50">
+        <h1>Добавление Риликвии</h1>
+        <form th:action="@{/admin/add/skill}" method="post" enctype="multipart/form-data">
+            <p>вставте икону Абилки
                 <input type="file" name="iconClassHero">
-                </p>
-                <input type="text" name="classHero" placeholder="Ведите имя класса" class="form-control"><br>
+            </p>
+            <input type="text" name="classHero" placeholder="Ведите имя класса" class="form-control"><br>
 
-                <textarea name="full_text" placeholder="Ведите полное описание класса" class="form-control" rows="20"></textarea><br>
+            <textarea name="full_text" placeholder="Ведите полное описание класса" class="form-control"
+                      rows="20"></textarea><br>
 
-                <button type="submit" class="btn btn-success">Добавить</button>
-            </form>
+            <button type="submit" class="btn btn-success">Добавить</button>
+        </form>
 
-        </main>
     </div>
 </div>
 
