--- a/src/main/resources/templates/menu/button2/admin/skill/skillDetals.html
+++ b/src/main/resources/templates/menu/button2/admin/skill/skillDetals.html
@@ -9,12 +9,12 @@
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
 
-<div class="container-fluid" id="t">
+
   <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+    <nav class="col-md-2 sidebar-nav"
          th:insert="blocks/menuRightAdmin ::div"></nav>
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <div class="col-md-10 fon-1400px pd-50">
       <div class="centr-1400px fon-1400px" >
 
         <div class="inline-block-table">
@@ -51,13 +51,12 @@
 
 
       </div>
-    </main>
+    </div>
   </div>
   <footer th:insert="blocks/headerFooter/footer :: div"></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
-</div>
 
 </body>
 </html>
