--- a/src/main/resources/templates/menu/button2/admin/skill/skillEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/skill/skillEdit.html
@@ -6,14 +6,12 @@
 
 </header>
 
-<div class="container-fluid">
+
     <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+        <nav class="col-md-2 sidebar-nav"
              th:insert="blocks/menuRightAdmin ::div"></nav>
 
-
-
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <div class="col-md-10 fon-1400px pd-50">
             <h1>Обнавление Абилки</h1>
             <form th:action="@{'/admin/edit/skill/' + ${skill.id}} " method="post" enctype="multipart/form-data">
                 <p>вставте икону абилки
@@ -27,10 +25,10 @@
                 <a th:href="'/admin/delete/skill/' + ${skill.id}" class="btn btn-success">Удалить</a>
             </form>
 
-        </main>
+        </div>
 
     </div>
-</div>
+
 
 
 <footer th:insert="blocks/headerFooter/footer :: div"></footer>
